--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@RobsonAndraDev/npm-package-test",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -8,7 +8,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git://github.com/RobsonAndraDev/npm-package-test.git"
+    "url": "git+https://github.com/RobsonAndraDev/npm-package-test.git"
   },
   "author": "Robson Andrade",
   "license": "ISC",
